--- a/_notebooks/2023-09-05-week-1-plans.ipynb
+++ b/_notebooks/2023-09-05-week-1-plans.ipynb
@@ -14,6 +14,18 @@
     "type: plans\n",
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# week 1 plans\n",
+    "- add freeform photos to the home page\n",
+    "- start learning and reviewing hacks\n",
+    "- finish the home page\n",
+    "- prepare/present for live review\n",
+    "- set up Jupyter Notebook"
+   ]
   }
  ],
  "metadata": {
