--- a/_notebooks/2023-09-05-week-2-plans.ipynb
+++ b/_notebooks/2023-09-05-week-2-plans.ipynb
@@ -9,7 +9,7 @@
     "comments: true\n",
     "layout: post\n",
     "title: week 2 plans\n",
-    "description:  Example!!! This sample shows markdown cell, markdown table, markdown code fencing, and code cells.\n",
+    "description:  This was what my plans for week 2 were.\n",
     "courses: { compsci: {week: 2} }\n",
     "type: plans\n",
     "---"
@@ -22,7 +22,8 @@
     "# week 2 plans\n",
     "- snake game\n",
     "- start calculator project\n",
-    "- organize time box"
+    "- organize time box\n",
+    "- start creating lab notebook"
    ]
   }
  ],
